# drake-research

./: .clang-format  LearnDrake.code-workspace
flap/: .gitignore  BUILD  abstract_value_logger.cc  aerodynamics.cc  aerodynamics.h  aerodynamics_config.yaml  drake-robot-arm.code-workspace  flap.py  main.cc
flap/URDF_LargeWings/urdf/: URDF_LargeWings.sdf  URDF_LargeWings.urdf
flap/data_scripts/: rw_force_graph.py  rw_graph.py  rw_joint_data.py
flapgood/: BUILD.bazel  sdf_sim.cc  sdf_sim_shadow.cc
flapgood/models/: four_bar_wield.sdf  wing_asm_simple.sdf  wing_mod.sdf
