# load("//tools/lint:lint.bzl", "add_lint_tests")
load("//tools/skylark:drake_cc.bzl", "drake_cc_binary", "drake_cc_library")

# package(default_visibility = ["//visibility:private"])

filegroup(
    name = "models",
    srcs = glob([
        "models/*.sdf",
    ]),
    visibility = [
        "//:__pkg__",
        "//bindings/pydrake/multibody:__pkg__",
    ],
)

drake_cc_binary(
    name = "sdf_sim",
    srcs = ["sdf_sim.cc"],
    # add_test_rule = 1,
    data = [":models"],
    test_rule_args = ["--simulation_time=0.1"],
    deps = [
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/tree",
        "//systems/analysis:simulator",
        "//systems/analysis:simulator_gflags",
        "//systems/analysis:simulator_print_stats",
        "//systems/framework:diagram",
        "//visualization:visualization_config_functions",
        "@gflags",
    ],
)

# add_lint_tests()